# pes

./: .flake8  .gitignore  MANIFEST.in  Makefile  README.md  dummy.py  notes  run_tests  setup.cfg
.github/workflows/: ci-linux.yml
src/pes/: __main__.py  app.py  control.py  device.py  editor.py  esp.py  filesystem.py  main_panel.py  main_window.py  resources.py  state_widget.py  statusbar.py  theme.py
src/pes/resources/: resources.qrc
tests/: test_dummy.py
