[metadata]
name = pes
description = IDE for ESP8266 with MicroPython
long_description = file: README.md
long_description_content_type = text/markdown
author = Gabriel Acosta
author_email = acostadariogabriel@gmail.com
project_urls =
    Bug Tracker = https://github.com/centaurialpha/pes/issues

license = GPLv3+

[options]
packages = find:
package_dir =
    =src
scripts =
    bin/pes

[options.packages.find]
where = src

[options.extras_require]
test = flake8;
dev = ipython
